NXP-31182: Depends on Nashorn as it has been removed from Java 17