@@ -42,8 +42,7 @@ import org.nuxeo.ecm.core.api.PropertyException;
 import org.nuxeo.ecm.core.api.impl.DocumentModelListImpl;
 import org.nuxeo.ecm.core.api.model.Property;
 import org.nuxeo.ecm.core.schema.DocumentType;
-
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 /**
  * Wrap a {@link DocumentModel} to expose in a pretty way more information to automation scripts.
@@ -86,8 +85,8 @@ public class DocumentScriptingWrapper extends HashMap<String, Object> {
     public static Object unwrap(Object object) {
         // First unwrap object if it's a nashorn object
         Object result = object;
-        if (result instanceof ScriptObjectMirror) {
-            result = ScriptObjectMirrors.unwrap((ScriptObjectMirror) result);
+        if (result instanceof ScriptObjectMirror som) {
+            result = ScriptObjectMirrors.unwrap(som);
         }
         // Second unwrap object
         if (result instanceof DocumentScriptingWrapper) {
